# ptvc24-ascent

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  export.ps1  export.sh  make.bat  makefile  readme.txt
.github/workflows/: cmake-single-platform.yml  cmake-windows.yml
assets/: CREDITS.txt  credits.txt
assets/models/: batching_test.blend  batching_test.glb  suzanne.glb  test_course.blend  test_course.glb
assets/shaders/: README.md  bloom_down.comp  bloom_up.comp  direct.frag  direct.vert  final_finalization.frag  finalization.frag  framebuffer_debug.frag  imgui.frag  imgui.vert  lens_blur.comp  lens_flare.comp  lens_glare.comp  motion_blur.frag  nuklear.frag  nuklear.vert  particles.comp  particles.frag  particles.vert  particles_emitter.comp  pbr.frag  pbr.vert  physics_debug.frag  physics_debug.vert  quad_uv.vert  shadow.vert  sky.frag  sky.vert  sky_cubemap.frag  sky_procedural.frag  terrain.frag  terrain.tesc  terrain.tese  terrain.vert  test.frag  test.vert  waterShader.frag  waterShader.vert
assets/shaders/gtao/: gtao.comp  gtao_bevy.comp  gtao_bevy_test.comp  gtao_bevy_working-3.comp  gtao_bevy_working-4.comp  gtao_lucent.comp  gtao_lucent_working-clean.comp  gtao_lucent_working-first.comp  gtao_tmp_b-1.comp  gtao_tmp_b-2.comp  gtao_tmp_l-1.comp  gtao_tmp_l-2.comp  preprocess_depth.comp  spatial_denoise.comp
assets/shaders/objects/: depth_prepass.vert  pbr.frag  shadow.vert
assets/shaders/particles/: particles_reset.comp
assets/shaders/terrain/: terrain.frag  terrain.tesc  terrain.tese  terrain.vert  terrain_depth_prepass.tese  terrain_shadow.tese  terrain_shadow.vert
assets/shaders/water/: water.frag  water.tesc  water.tese
assets/textures/: README.md  credits.txt  ghost_color_gradient.psd  ibl_brdf_lut.f32
assets/textures/input/: controls.atlas
assets/textures/particle/: circle.xcf  fire_scale.psd  fire_tint.psd
assets/textures/skybox/: kloofendal_diffuse.iblenv  kloofendal_specular.iblenv
assets/textures/ui/: main_menu_background.xcf  widgets.xcf
blender/: place_on_curve.py
docs/: Abgabe.md  Effects.md  Environment.md  Physics.md  References.md  Rendering.md  Scene.md
docs/resources/: Batching-Indirect_Drawing.excalidraw
include/dds_image/: dds_formats.hpp
include/tweeny/: tween.h
lib/windows/: glew32s.lib  glew32sd.lib  glfw3.lib  glfw3d.lib
src/: Camera.cpp  Camera.h  Direct.cpp  Direct.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Input.cpp  Input.h  Loader.cpp  Loader.h  Main.cpp  Menu.h  Physics.h  ScoreManager.cpp  ScoreManager.h  Settings.cpp  Settings.h  Setup.cpp  Setup.h  Tween.cpp  Tween.h  Utils.h  Window.h
src/Audio/: Assets.cpp  Assets.h  Audio.cpp  Audio.h
src/Controller/: AbstractController.h  GameController.h  MainController.cpp  MainController.h  MainControllerLoader.cpp  MainControllerLoader.h  MainMenuController.cpp  MainMenuController.h  RaceManager.cpp  RaceManager.h
src/Debug/: DebugMenu.cpp  DebugMenu.h  Direct.cpp  Direct.h  ImGuiBackend.cpp  ImGuiBackend.h  Settings.h
src/GL/: Declarations.h  Framebuffer.cpp  Framebuffer.h  Geometry.cpp  Geometry.h  Indirect.h  Object.cpp  Object.h  Shader.cpp  Shader.h  StateManager.cpp  StateManager.h  Sync.h  Texture.cpp  Texture.h  Util.cpp  Util.h
src/Loader/: Atlas.cpp  Atlas.h  Basic.cpp  Environment.h  Gltf.cpp  Gltf.h  Image.cpp  Loader.h  Terrain.cpp  Terrain.h  Water.cpp  Water.h
src/Loader/Environment/: DecodeIblEnv.cpp  Environment.cpp  LZ4.h  LZ4Frames.cpp
src/Loader/Gltf/: Gltf.cpp  Scene.cpp
src/Loader/Gltf/Graphics/: Graphics.cpp  Graphics.h  Material.cpp  Mesh.cpp
src/Loader/Gltf/Physics/: Mesh.cpp  Physics.cpp  Physics.h
src/Loader/Ibl/: DecodeF32.cpp  DecodeIblEnv.cpp  Environment.cpp  LZ4Frames.cpp
src/Particles/: ParticleSystem.cpp  ParticleSystem.h
src/Physics/: Debug.cpp  Debug.h  Layers.h  Physics.cpp  Physics.h  Shapes.h
src/Physics/Jolt/: BroadPhaseLayerInterfaceTable.h  ObjectLayerPairFilterTable.h  ObjectVsBroadPhaseLayerFilterTable.h
src/Renderer/: BloomRenderer.cpp  BloomRenderer.h  DebugRenderer.cpp  DebugRenderer.h  DepthPrepassRenderer.cpp  DepthPrepassRenderer.h  FinalFinalizationRenderer.cpp  FinalFinalizationRenderer.h  FinalizationRenderer.cpp  FinalizationRenderer.h  GtaoRenderer.cpp  GtaoRenderer.h  IblEnvironment.cpp  IblEnvironment.h  LensEffectsRenderer.cpp  LensEffectsRenderer.h  MaterialBatchRenderer.cpp  MaterialBatchRenderer.h  MotionBlurRenderer.cpp  MotionBlurRenderer.h  ShadowRenderer.cpp  ShadowRenderer.h  SkyRenderer.cpp  SkyRenderer.h  TerrainRenderer.cpp  TerrainRenderer.h  TessellationRenderer.cpp  TessellationRenderer.h  WaterRenderer.cpp  WaterRenderer.h  WaterTRenderer.cpp  WaterTRenderer.h
src/Scene/: Character.cpp  Character.h  Entity.cpp  Entity.h  FreeCam.cpp  FreeCam.h  Light.h  Objects.h  OrbitCam.cpp  OrbitCam.h  Scene.cpp  Scene.h
src/Scene/Objects/: BarrierObstacle.cpp  BarrierObstacle.h  BoostRing.cpp  BoostRing.h  Checkpoint.cpp  Checkpoint.h  CheckpointMarker.cpp  CheckpointMarker.h  Crate.cpp  Crate.h  GoalFirework.cpp  GoalFirework.h  MillObstacle.cpp  MillObstacle.h  Propeller.cpp  Propeller.h  TestObstacle.cpp  TestObstacle.h
src/UI/: ImGui.cpp  ImGui.h  Renderer.cpp  Renderer.h  Screen.h  Skin.cpp  Skin.h  Style.cpp  Style.h  UI.cpp  UI.h
src/UI/Screens/: DebugMenu.cpp  DebugMenu.h  Fade.cpp  Fade.h  Hud.cpp  Hud.h  LevelLoading.cpp  LevelLoading.h  Loading.cpp  Loading.h  MainMenu.cpp  MainMenu.h  Pause.cpp  Pause.h  Score.cpp  Score.h  Settings.cpp  Settings.h  Start.cpp  Start.h
src/Util/: Format.h  FpsLimit.cpp  FpsLimit.h  Log.h  Task.cpp  Task.h  TaskPool.h  Timer.h
